Fixed stars being too close together and percent not being truncated

--- a/gamersnet_frontend/src/components/profileComponents/profileMain/styles.css
+++ b/gamersnet_frontend/src/components/profileComponents/profileMain/styles.css
@@ -16,6 +16,12 @@
     padding: 1rem;
 }
 
+@media (max-width:1500px) {
+    .profile {
+        width: 80%;
+    }
+}
+
 .profile-header {
     font-size: 1.5rem;
     margin-bottom: 1rem;
